LOGBACK-888: Add possibility to mark property file/resource as optional
Support attribute "optional" in property element.

Similar to the already existing support in the include element, it
prevents errors loading non-existent property files/resources.

--- a/logback-site/src/site/pages/manual/configuration.html
+++ b/logback-site/src/site/pages/manual/configuration.html
@@ -1643,6 +1643,12 @@ import ch.qos.logback.classic.LoggerContext;
    &lt;/root>
 &lt;/configuration></pre>
 
+   <p>If the specified file or resource cannot be found, logback will
+   throw an error. In case the included file is optional, you can suppress
+   that error by setting <span class="attr">optional</span> attribute to
+   <code>true</code> in the <code>&lt;property&gt;</code> element.</p>
+
+   <pre class="prettyprint source">&lt;property <b>optional="true"</b> ... /></pre>
 
    <h4 class="doAnchor" name="scopes">Scopes</h4>
 
